fixed branza and carne center alignment

--- a/src/app/branza/branza.component.scss
+++ b/src/app/branza/branza.component.scss
@@ -528,8 +528,8 @@
     position: absolute;
     width: 100px;
     height: 111.26px;
-    left: 138px;
-    top: 216.038px;
+    left: 35%;
+    top: 29%;
     overflow: visible;
 }
 #Group_102 {
